fix(tooltip): keep tooltip content visible as user hovers
Previously, the tooltip content was hidden as soon as the user moused
out of the trigger.

Now, the tooltip content will stay visible if the user mouses from the
trigger into the content. To support this, the tooltip content has an
expanded hover target provided by the `::after` pseudo element.

VPAT-617

--- a/projects/angular/src/popover/tooltip/_tooltips.clarity.scss
+++ b/projects/angular/src/popover/tooltip/_tooltips.clarity.scss
@@ -110,6 +110,15 @@
       transition: opacity 0.3s linear;
       white-space: normal;
       z-index: map-get($clr-layers, tooltips);
+
+      &::after {
+        position: absolute;
+        top: -20px;
+        left: -20px;
+        right: -20px;
+        bottom: -20px;
+        content: '';
+      }
     }
 
     &:hover > .tooltip-content,
